ajout i3 block et nerdfont

--- a/config/i3/config
+++ b/config/i3/config
@@ -14,7 +14,8 @@ set $mod Mod4
 # is used in the bar {} block below.
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono, FontAwesome 10
+font pango:DejaVu Sans Mono, DejaVu Sans Mono Nerd Font Complete 10
+#font pango:DejaVu Sans Mono, FontAwesome 10
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # The font above is very space-efficient, that is, it looks good, sharp and
@@ -178,7 +179,8 @@ bindsym $mod+shift+b exec feh --randomize --bg-fill /home/frouny/Documents/backg
 exec --no-startup-id feh --randomize --bg-fill /home/frouny/Documents/backgrounds/chromecast-backgrounds/files/*
 
 bar {
-    font pango:monospace 10, FontAwesome 10
+   # font pango:monospace 10, FontAwesome 10
+    font pango:Ubuntu Mono Bold Nerd Font Complete Mono 14
     tray_padding 2
     tray_output HDMI2
     colors {
@@ -191,7 +193,7 @@ bar {
           active_workspace #333333 #222222 #888888
           focused_workspace  #4c7899 #285577 #ffffff
         }
-    status_command i3status
+    status_command i3blocks
 }
 
 
